--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-987.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-629.0KB/s(Youtube:不良林), server: 172.99.188.71, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇸🇬 新加坡-1.44MB/s(Youtube:不良林), server: 43.134.229.238, port: 57557, type: vmess, uuid: 7d869c3d-9223-4470-a51c-5c50d41b15cd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-470.4KB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
   - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-1.67MB/s(Youtube:不良林), server: 134.195.198.95, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-783.2KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-454.8KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇳 中国-384.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-368.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-301.5KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-885.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.42MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-671.5KB/s(Youtube:不良林), server: 193.108.118.30, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇫🇷 法国-806.8KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 38.143.66.20, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-4.80MB/s(Youtube:不良林), server: 154.17.25.101, port: 63163, type: ss, cipher: aes-256-gcm, password: !<str> 49231199}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-987.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-629.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-470.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-783.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-454.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-885.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-671.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-987.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-629.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-470.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-783.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-454.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-885.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-671.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-987.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-629.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-470.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-783.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-454.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-885.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-671.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-987.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-629.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-470.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-783.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-454.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-885.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-671.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-987.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-629.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-470.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-783.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-454.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-885.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-671.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-987.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-629.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-470.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-783.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-454.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-885.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-671.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-987.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-629.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-470.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-783.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-454.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-301.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-885.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇩🇪 德国-671.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
