--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-987.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-303.0KB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-302.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-629.0KB/s(Youtube:不良林), server: 172.99.188.71, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇸🇬 新加坡-1.44MB/s(Youtube:不良林), server: 43.134.229.238, port: 57557, type: vmess, uuid: 7d869c3d-9223-4470-a51c-5c50d41b15cd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-470.4KB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
-  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-998.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-783.2KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇳 中国-2.42MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
   - {name: 🇩🇪 德国-671.5KB/s(Youtube:不良林), server: 193.108.118.30, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇫🇷 法国-806.8KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-987.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-303.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-629.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-783.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
       - 🇩🇪 德国-671.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-987.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-303.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-629.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-783.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
       - 🇩🇪 德国-671.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-987.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-303.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-629.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-783.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
       - 🇩🇪 德国-671.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-987.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-303.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-629.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-783.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
       - 🇩🇪 德国-671.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-987.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-303.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-629.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-783.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
       - 🇩🇪 德国-671.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-987.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-303.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-629.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-783.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
       - 🇩🇪 德国-671.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-987.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-303.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-302.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-629.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-783.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
       - 🇩🇪 德国-671.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
