--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.45MB/s(Youtube:不良林), server: 134.195.198.95, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-702.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-2.05MB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 未知国家-470.4KB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
   - {name: 🇺🇸 美国-458.5KB/s(Youtube:不良林), server: 172.99.188.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-1.68MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.38MB/s(Youtube:不良林), server: 193.108.118.30, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇫🇷 法国-806.8KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: 38.143.66.20, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-4.80MB/s(Youtube:不良林), server: 154.17.25.101, port: 63163, type: ss, cipher: aes-256-gcm, password: !<str> 49231199}
+  - {name: 🇺🇸 美国-4.38MB/s(Youtube:不良林), server: 154.17.25.101, port: 63163, type: ss, cipher: aes-256-gcm, password: !<str> 49231199}
+  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.15MB/s(Youtube:不良林), server: 134.195.198.95, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-710.7KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-386.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-917.8KB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇬🇧 英国-1.07MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇬🇧 英国-653.1KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇰🇷 韩国-408.2KB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
-      - 未知国家-470.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-458.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-386.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-917.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-653.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
-      - 未知国家-470.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-458.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-386.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-917.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-653.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
-      - 未知国家-470.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-458.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-386.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-917.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-653.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
-      - 未知国家-470.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-458.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-386.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-917.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-653.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
-      - 未知国家-470.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-458.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-386.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-917.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-653.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
-      - 未知国家-470.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-458.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-386.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-917.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-653.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-702.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.05MB/s(Youtube:不良林)
-      - 未知国家-470.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-458.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-806.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-386.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-917.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-653.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
